<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.GeneralSettingsFragment"
        android:title="@string/settings_general"/>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.BookmarkSettingsFragment"
        android:title="@string/bookmark_settings"/>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.DisplaySettingsFragment"
        android:title="@string/settings_display"/>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.PrivacySettingsFragment"
        android:title="@string/settings_privacy"/>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.AdvancedSettingsFragment"
        android:title="@string/settings_advanced"/>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.AboutSettingsFragment"
        android:summary="@string/settings_about_explain"
        android:title="@string/settings_about"/>
    <header
        android:summary="@string/faq_description"
        android:title="@string/faq">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.myproxyvpn.com/faq">
            <extra
                android:name="SOURCE"
                android:value="SELF"/>
        </intent>
    </header>
    <header
        android:fragment="com.browser.myproxyvpn.settings.fragment.DebugSettingsFragment"
        android:title="@string/debug_title"/>
</preference-headers>