<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ChoiceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upgrade_text"
            android:lineSpacingExtra="7dp"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/month_1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/radius_solid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_1_price"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/month_6"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/radius_solid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_6"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_6_price"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:background="@drawable/save_radius_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_6_save"
            android:textColor="@color/submit_blue"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="-45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/radius_solid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_1_price"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:background="@drawable/save_radius_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_1_save"
            android:textColor="@color/submit_blue"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trial_day"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="-45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/save_radius_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial"
            android:textColor="@color/submit_blue"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial_price"
            android:textColor="@color/submit_blue"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:background="@drawable/save_radius_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial_save"
            android:textColor="@color/submit_blue"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/premium_accounts_benefit"
            android:textColor="@color/light_black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/no_ads"
            android:textColor="@color/lighter_black"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/server_locations"
            android:textColor="@color/lighter_black"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/faster_speeds"
            android:textColor="@color/lighter_black"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/priority_support"
            android:textColor="@color/lighter_black"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/all_future_servers"
            android:textColor="@color/lighter_black"
            android:textSize="13sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/start_donePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="7dp"
       android:visibility="gone"
        android:background="@drawable/border"
        android:text="@string/start_browsing"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</LinearLayout>