<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/dialog_bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/lock_alert_message"
        android:textColor="@android:color/white"
        android:textSize="17dp" />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/watch_video"
        android:background="@color/grayer_black"
        android:textColor="@color/white"
        android:text="@string/watch_video"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/upgradePremium"
        android:background="@color/grayer_black"
        android:textColor="@color/white"
        android:text="@string/upgrade_topremium_button"/>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/grayer_black"
        android:layout_marginBottom="10dp"
        android:id="@+id/noThanks"
        android:textColor="@color/white"
        android:text="@string/no_thanks"/>


</LinearLayout>