<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/premium"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bolt_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/bolt_icon"
            app:srcCompat="@drawable/bolt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_premium"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLogin"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/bolt_icon"
            android:padding="10dp"
            android:tint="#FAFF00"
            app:srcCompat="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my"
                android:textColor="@android:color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/proxy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/proxyvpn"
                android:textColor="@android:color/white"
                android:textSize="45sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mini_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/free_browser_proxy"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            android:gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="20dp"
            android:background="@drawable/border"
            android:text="@string/start_browsing"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/reload_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/reload_proxy"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>
